# ML22_EO

./: .gitignore  03_ray.ipynb  README.md  hypertune.py  pyproject.toml  tune_test.py
.devcontainer/: devcontainer.json
dev/notebooks/: explore_dataset.ipynb
models/ray/train_2023-06-02_14-51-47/: experiment_state-2023-06-02_14-51-47.json  search_gen_state-2023-06-02_14-51-47.json  searcher-state-2023-06-02_14-51-47.pkl
models/ray/train_2023-06-02_18-08-27/: experiment_state-2023-06-02_18-08-27.json  search_gen_state-2023-06-02_18-08-27.json  searcher-state-2023-06-02_18-08-27.pkl
models/ray/train_2023-06-02_18-14-30/: experiment_state-2023-06-02_18-14-30.json  search_gen_state-2023-06-02_18-14-30.json  searcher-state-2023-06-02_18-14-30.pkl
models/ray/train_2023-06-02_18-27-43/: experiment_state-2023-06-02_18-27-43.json  search_gen_state-2023-06-02_18-27-43.json  searcher-state-2023-06-02_18-27-43.pkl
models/ray/train_2023-06-03_11-38-01/: experiment_state-2023-06-03_11-38-01.json  search_gen_state-2023-06-03_11-38-01.json  searcher-state-2023-06-03_11-38-01.pkl
models/ray/train_2023-06-03_12-00-55/: experiment_state-2023-06-03_12-00-55.json  search_gen_state-2023-06-03_12-00-55.json  searcher-state-2023-06-03_12-00-55.pkl
models/ray/train_2023-06-03_12-10-39/: experiment_state-2023-06-03_12-10-39.json  search_gen_state-2023-06-03_12-10-39.json  searcher-state-2023-06-03_12-10-39.pkl
src/: dash_settings.py  dashboard.py  data_tools.py  datasets.py  settings.py
src/models/: rnn_models.py  train_model.py
(+2893 files in other folders)
